# oc_projet12_backend_securise_avec_django_orm

./: .flake8  .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: ethicalcheck.yml
flake8_rapport/: index.html
flake8_report/: index.html
src/authenticators/: jwt_authenticator.py
src/clients/: admin_console.py  authentication_console.py  console.py  create_console.py  delete_console.py  info_console.py  init_console.py  read_console.py  update_console.py
src/commands/: authentication_commands.py  database_create_commands.py  database_delete_commands.py  database_read_commands.py  database_update_commands.py  dummy_database_creation_command.py  generate_sample_commands.py  get_commands.py  helps.py  infos_data_commands.py  infos_update_password_command.py  init_commands.py
src/controllers/: authentication_controller.py  csv_file_read_controller.py  database_create_controller.py  database_delete_controller.py  database_initializer_controller.py  database_read_controller.py  database_update_controller.py  get_controllers.py  infos_data_controller.py  infos_update_password_controller.py  initializer_controller.py  jwt_controller.py
src/datas/: make_a_french_companies_sample.py  make_external_api_call_for_town_based_on_zip_code.py
src/datas/csv/: french_companies.csv
src/exceptions/: exceptions.py
src/external_datas/: make_dummy_database_creation_command.py  make_external_api_call_for_french_companies_sample.py  make_external_api_call_for_region_based_on_int_code.py  make_external_api_call_for_ville_based_on_code_postal.py
src/external_datas/csv/: french_companies.csv
src/forms/: forms.py
src/languages/: language_bridge.py
src/languages/fr/: application_dictionnary.json
src/languages/templates/: language.j2
src/models/: models.py
src/printers/: printer.py
src/settings/: logtail_handler.py  settings.py
src/utils/: utils.py
src/validators/: add_data_validators.py  update_data_validators.py
src/validators/data_syntax/: FR_validators.py
src/validators/data_syntax/fr/: validators.py
src/validators/references/FR/: metiers_roles.csv  types_voies.csv
src/validators/references/fr/: metiers.csv  types_voies.csv
src/views/: authentication_view.py  clients_view.py  collaborators_view.py  companies_view.py  contracts_view.py  create_views.py  delete_views.py  departments_view.py  events_view.py  init_views.py  jwt_view.py  locations_view.py  roles_view.py  update_views.py  views.py
src/views/crud_views/: create_views.py  delete_views.py  views.py
tests/: conftest.py
tests/authenticators/: test_jwt_authenticator.py
tests/clients/: test_console.py
tests/controllers/: test_authentication_controller.py  test_get_controllers.py
tests/forms/: test_forms.py
tests/functional_tests/: test_besoins_service_commercial.py  test_besoins_service_gestion.py  test_besoins_service_support.py
tests/utils/: test_utils.py
tests/validators/: test_add_data_validators.py  test_update_data_validators.py  test_validators_data_syntax.py
tests/views/: test_authentication.py  test_clients_view.py  test_create_views.py  test_delete_views.py  test_update_views.py  test_views.py  test_z_delete_views.py  test_z_purge.py
